--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.holder {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
+.item {
+	margin-top: 10px;
+	width: 100px;
+	height: 100px;
+	background-color: yellow;
+}
